Still trying to get coveralls in CI env

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ rvm: '2.2.3'
 before_install:
 - sed -i '2d' Gemfile
 
+after_success:
+- CI=true TRAVIS=true coveralls --verbose
+
 script: bundle exec rspec spec
