--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,4 @@ rvm: '2.2.3'
 before_install:
 - sed -i '2d' Gemfile
 
-# script: bundle exec rspec spec
-script:
-  - mkdir -p spec && bundle exec rspec spec
+script: bundle exec rspec spec
