Order selection working properly including updating quantaties to zero and overwriting previous quantaties with new stipulated amount

--- a/lib/menu.yaml
+++ b/lib/menu.yaml
@@ -1,11 +1,11 @@
-- :"Bacon ipsum": "£3"
-- :"Kielbasa chicken": "£4"
-- :"Doner pig": "£5"
-- :"Alcatra flank": "£1.50"
-- :"Short ribs": "£5.32"
-- :"Filet mignon": "£3.24"
-- :"Shank tri-tip": "£1.20"
-- :"Salami turkey drumstick": "£8"
-- :"Meatball bresaola": "£30"
-- :"rump fatback": "£300"
-- :"chicken flank": "£9"
+:"Bacon ipsum": "£3"
+:"Kielbasa chicken": "£4"
+:"Doner pig": "£5"
+:"Alcatra flank": "£1.50"
+:"Short ribs": "£5.32"
+:"Filet mignon": "£3.24"
+:"Shank tri-tip": "£1.20"
+:"Salami turkey drumstick": "£8"
+:"Meatball bresaola": "£30"
+:"rump fatback": "£300"
+:"chicken flank": "£9"
