--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   DisabledByDefault: false
   DisplayCopNames: true
   DisplayStyleGuide: true
-  RunRailsCops: false
+  Rails: true
 
 # currently not working on hound
 # inherit_from:
@@ -49,7 +49,7 @@ Metrics/ParameterLists:
 Metrics/PerceivedComplexity:
   Max: 7
 
-# ************** Enabled ************** 
+# ************** Enabled **************
 
 Style/AccessModifierIndentation:
   Description: Check indentation of private/protected visibility modifiers.
@@ -546,9 +546,9 @@ Style/UnneededPercentQ:
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#percent-q'
   Enabled: true
 
-Style/TrailingUnderscoreVariable:
+Style/lingUnderscoreVariable:
   Description: >-
-                 Checks for the usage of unneeded trailing underscores at the
+                 Checks for the usage of unneeded ling underscores at the
                  end of parallel variable assignment.
   Enabled: true
 
@@ -568,7 +568,7 @@ Style/WhileUntilDo:
   Description: 'Checks for redundant do after while or until.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#no-multiline-while-do'
   Enabled: true
-# enable for later challenge 
+# enable for later challenge
 
   # Align ends correctly.
 Lint/EndAlignment:
@@ -749,7 +749,7 @@ Metrics/PerceivedComplexity:
                  human reader.
   Enabled: true
 
-# ************** Disabled ************** 
+# ************** Disabled **************
 
 Style/EmptyLinesAroundClassBody:
   Description: Keeps track of empty lines around class bodies.
@@ -757,7 +757,7 @@ Style/EmptyLinesAroundClassBody:
   EnforcedStyle: empty_lines
   SupportedStyles:
   - empty_lines
-  - no_empty_lines  
+  - no_empty_lines
 
 Style/EmptyLinesAroundBlockBody:
   Enabled: false
@@ -1065,7 +1065,7 @@ Style/TrailingBlankLines:
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#newline-eof'
   Enabled: false
 
-Style/TrailingComma:
+Style/TrailingCommaInLiteral:
   Description: 'Checks for trailing comma in parameter lists and literals.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas'
   Enabled: false
