WIP first tests of class messeger stubing time

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-ACCOUNT_SID=ACc950c8685d317eb1238810d7ebc14c79
-AUTH_TOKEN=3ce113d448eb92132bfc79e8656f27f3
-CUSTOMER_PHONE_NUMBER="+447886081351"
+TWILIO_ACCOUNT_SID=ACc950c8685d317eb1238810d7ebc14c79
+TWILIO_AUTH_TOKEN=3ce113d448eb92132bfc79e8656f27f3
+TWILIO_SOURCE_PHONE="+441923750614"
+TWILIO_DESTINATION_PHONE="+447886081351"
