Finish v1 of challenge

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-SID=AC96a9f9fbf808e44e5c9fdc8ea3bda92a
-TOKEN=edd9855af7f30aeb1e45523a63627fff
-NUMBER=+33973726500
+SID=ACe2bb17945a194e9300c26d892a666346
+TOKEN=a233fa3e95fe7346e2c9bbecc04ce1bc
+TWILIO_NUMBER=+33756798186
+MY_NUMBER=+33642289779
