Remove .erv credentials

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TWILIO_ACCOUNT_SID = 'AC1782568c81a3fa4547596928eaef9315'
-TWILIO_AUTH_TOKEN = 'bb90a5a28183fc29d1dd8d39e5b2d5bc'
+TWILIO_ACCOUNT_SID = ''
+TWILIO_AUTH_TOKEN = ''
 
-TWILIO_NUMBER = '+441609810035'
-TWILIO_MY_NUMBER = '+447517051867'
+TWILIO_NUMBER = ''
+TWILIO_MY_NUMBER = ''
